--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,64 @@ body * {
   scroll-behavior: smooth;
 }
 
-/* navbar style */
+
+.topnav {
+
+  background-color:#003b71;
+  width: 100%;
+  z-index: 1; 
+  position: fixed;
+  top: -80px;
+  transition: top 0.3s;
+
+  
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  margin-right: 18px;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: 300;
+
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav .icon {
+  display: none;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
+
+/* navbar style
 #navbar {
   width: 100%;
   background-color: #003b71;
@@ -43,9 +100,11 @@ body * {
   display: inline;
   text-align: center;
   padding: 32px 16px;
-}
+} */
 
-/* mobile styling for navbar */
+
+/* 
+mobile styling for navbar
 @media only screen and (max-width: 600px) {
   #navbar img {
     height: 40px;
@@ -57,7 +116,7 @@ body * {
     margin-left: 24px;
     display: block;
   }
-}
+} */
 
 /* contact section spacing */
 .contact-section {
@@ -97,6 +156,7 @@ body * {
 
 /* header container */
 #header {
+
   padding-top: 100px;
   padding-right: 15px;
   padding-left: 15px;
@@ -166,6 +226,7 @@ body * {
 #services {
   background-color: rgb(169, 179, 188, 0.7);
   height: 75vh;
+
   padding-right: 15px;
   padding-left: 15px;
   margin-right: auto;
@@ -173,7 +234,7 @@ body * {
 }
 
 #services h1 {
-  padding-top: 25px;
+  padding-top: 30px;
   text-align: center;
   font-size: 36px;
   font-weight: 500;
@@ -197,7 +258,7 @@ body * {
 /* services mobile style */
 @media only screen and (max-width: 600px) {
   #services {
-    height: 150vh;
+    height: 130vh;
   }
   #services h4 {
     text-align: left;
@@ -215,6 +276,7 @@ body * {
 #about {
   background-color: rgb(155, 166, 177, 0.7);
   height: 80vh;
+  overflow: scroll;
   padding-right: 15px;
   padding-left: 15px;
   margin-right: auto;
@@ -253,7 +315,7 @@ body * {
 /* about mobile style */
 @media only screen and (max-width: 600px) {
   #about {
-    height: 165vh;
+    height: 135vh;
   }
   #about p {
     font-size: 14px;
@@ -273,6 +335,7 @@ body * {
   margin-right: auto;
   margin-left: auto;
   height: 5vh;
+ 
   background-color: rgb(0, 59, 113, 0.6);
   color: white;
   font-weight: 300;
